# InVision-Redux

./: .gitignore  Makefile  Pipfile  README.md  api_requests.py  auth.py  build.py  compose.prod.yml  compose.yml  docker-compose.prod.yml  docker-compose.yml  download.py  index_generator.py  index_template.html  main.py  utils.py
backend/: Dockerfile  main.py  pyproject.toml  start.sh
backend/src/: api_requests.py  app.py  auth.py  browse.py  utils.py
backend/src/routes/: __init__.py  projects.py  scrape.py  screens.py  shares.py  tags.py
backend/src/scraper/: main.py
backend/src/scraper/src/: api_requests.py  browse.py  download.py  utils.py
frontend/: .eslintrc.cjs  Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: projects.tsx  screens.tsx  shares.tsx  tags.tsx
frontend/src/components/: About.tsx  Confetti.tsx  ConversationToggle.tsx  Hotspot.tsx  Hotspot.tsx.old  MiniPagination.tsx  Onboarding.tsx  ProjectCard.tsx  Redirect.tsx  Screen.tsx  ScreenCard.tsx  ScreenPreview.tsx  Spinner.tsx  ThemeToggle.tsx  Zoom.tsx  project.tsx  theme-toggle.tsx
frontend/src/constants/: defaultValues.ts  hotspots.ts
frontend/src/context/: collapsed-groups-provider.tsx  favorites-provider.tsx  theme-provider.tsx
frontend/src/hooks/: useCollapsedGroups.ts  useSwipe.ts  (+5 more)
scraper/: Pipfile  main.py  pyproject.toml  requirements.txt
scraper/src/: api_requests.py  browse.py  download.py  utils.py
src/: api_requests.py  build.py  download.py
(+67 files in other folders)
