[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Clément MOINE <clement.moine86@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
colorama = "^0.4.6"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
